fixed layout on mobile

--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -424,8 +424,9 @@ h2 {
 
   .container {
     width: 80%;
-    margin: 10px auto;
+    margin: 25px auto;
     padding: 10px;
+    margin-bottom: 70px;
   }
 
   .search-bar {
@@ -492,8 +493,9 @@ h2 {
 
   .container {
     width: 90%;
-    margin: 5px auto;
+    margin: 25px auto;
     padding: 5px;
+    margin-bottom: 70px;
   }
 
   .search-bar {
