--- a/src/app/user-detail/user-detail.component.scss
+++ b/src/app/user-detail/user-detail.component.scss
@@ -402,6 +402,7 @@ main {
     width: 100%;
     margin: 10px 0;
     flex-direction: column;
+    margin-bottom: 70px;
   }
 
   .sidebar {
@@ -412,6 +413,7 @@ main {
 
   main {
     width: 100%;
+    margin-top: -40px;
   }
 
   .profile-image {
@@ -472,6 +474,7 @@ main {
     width: 100%;
     margin: 10px 0;
     flex-direction: column;
+    margin-bottom: 70px;
   }
 
   .sidebar {
@@ -482,6 +485,7 @@ main {
 
   main {
     width: 100%;
+    margin-top: -40px;
   }
 
   .profile-image {
